# mini-make

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  buffer-test.c  buffer.c  chdir.c  ihooks.c  interpreter-test.c  interpreter.c  job-manager.c  job.c  listener.c  make.c  mini-make-gui.cpp  mini-make-gui.hpp  mini-make-server.c  mini-make.c  mini-make.pro  package.json  parser-test.c  parser.c  phooks.c  protocol-0.c  protocol-0.h  protocol.c  rule.c  stamp.h  string.c  table-test.c  table.c  target.c  test.mk  tree.c  var.c
cmake/: MiniMakeConfig.cmake.in  MiniMakeConfigVersion.cmake.in  mingw-toolchain.cmake
documentation/: CMakeLists.txt  Doxyfile.in  example-list.h  mainpage.md
examples/: CMakeLists.txt  Makefile  comment-spell-checker.c  list-targets.c
include/make/: assignment-stmt.h  chdir.h  command.h  include-stmt.h  interpreter.h  job-manager.h  job.h  listener.h  location.h  operation.h  options.h  parser.h  stat.h  string.h  table.h  var.h
include/mini-make/: assignment-stmt.h  buffer.h  chdir.h  client.h  command.h  error.h  ifdef-stmt.h  ihooks.h  include-stmt.h  interpreter-observer.h  interpreter.h  job-manager.h  job.h  listener.h  location.h  node.h  operation.h  options.h  parser.h  phooks.h  prerequisite.h  protocol.h  rule.h  server.h  string.h  table.h  target.h  thread-callback.h  thread.h  tree.h  var.h
posix/: buffer-io.c  buffer-io.h  client.c  server.c
source/: CMakeLists.txt  chdir.c  chdir.h  error.c  ihooks.c  interpreter-test.c  interpreter.c  job-manager.c  job.c  mini-make.c  mk_arena.c  mk_arena.h  mk_interpret.c  mk_interpret.h  mk_malloc.c  mk_malloc.h  mk_node.c  mk_node.h  mk_open.c  mk_open.h  mk_parse.c  mk_parse.h  mk_report.c  mk_report.h  mk_rule.c  mk_rule.h  mk_run.c  mk_run.h  mk_scan.c  mk_scan.h  mk_state.c  mk_state.h  mk_strdup.c  mk_strdup.h  mk_strlist.c  mk_strlist.h  mk_token.h  mk_tree.c  mk_tree.h  node.c  (+5 more)
source/posix/: thread.c
testing/: CMakeLists.txt
testing/makefiles/test1/: Makefile
testing/makefiles/test2/: Makefile
testing/projects/: CMakeLists.txt
testing/projects/basic/: CMakeLists.txt  main.c
windows/: buffer-io.c  buffer-io.h  client.c  server.c  thread.c
